--- a/src/scss/style-guide.scss
+++ b/src/scss/style-guide.scss
@@ -2,20 +2,7 @@
 @import 'partials/prefix-mixins';
 @import 'partials/layout'; // responsive grid and media queries
 @import 'partials/typography';
-
-
-// color palette - these colors will be the color swatches of the Colors section
-
-$color-1: #5f8ee4; // Cornflower Blue - Action color
-$color-2: #19191a; // Dark Blue
-$color-3: #e4655f; // Red
-$color-4: #e6e6e6; // light grey
-$color-5: #ffffff; // white
-
-// additional colors
-
-$success: #6fce72; // green
-$alert: $color-3; // red
+@import 'partials/colors';
 
 
 // fonts
@@ -30,7 +17,7 @@ xBackground
 
 body {
   /* this is the page background */
-  background-color: $color-5;
+  background-color: $color-1;
 }
 
 /* -------------------------------- 
@@ -41,9 +28,9 @@ xPatterns
 
 .cd-box {
   /* this is the container of various design elements - i.e. the 2 logo of the branding section */
-  border: 1px solid $color-4;
+  border: 1px solid $color-3;
   border-radius: 3px;
-  background: $color-5;
+  background: $color-1;
   box-shadow: 0 1px 1px rgba(#000, 0.05);
   padding: 6px;
 }
@@ -148,71 +135,6 @@ main > h1 {
     /* title goes into the header on big devices */
     color: $color-5;
   }
-}
-
-
-/* -------------------------------- 
-
-xButtons 
-
--------------------------------- */
-
-.btn {
-  border: none;
-  box-shadow: none;
-  border-radius: 0.25em;
-  font: {
-    size: 1.4rem;
-    family: $secondary-font;
-  }
-  color: $color-5;
-  padding: 0.6em 2.2em;
-  cursor: pointer;
-  background: $color-1;
-
-  &:focus {
-    outline: none;
-  }
-
-  .no-touch &:hover {
-    background: lighten($color-1, 5%);
-  }
-
-  &.btn-success {
-    background: $success;
-
-    .no-touch &:hover {
-      background: lighten($success, 5%);
-    }
-  }
-
-  &.btn-alert {
-    background: $alert;
-
-    .no-touch &:hover {
-      background: lighten($alert, 5%);
-    }
-  }
-
-  &.btn-outline {
-    color: $color-1;
-    background: transparent;
-    box-shadow: inset 0 0 0 1px $color-1;
-
-    .no-touch &:hover {
-      color: $color-5;
-      background: $color-1;
-    }
-  }
-
-  @include MQ(S) {
-    font-size: 1.6rem;
-  }
-}
-
-.cd-buttons .cd-box:nth-of-type(2) span {
-  /* CSS class name color */
-  color: $color-1;
 }
 
 /* -------------------------------- 
