Update on navigation styling and colors

--- a/src/scss/style-guide.scss
+++ b/src/scss/style-guide.scss
@@ -122,6 +122,117 @@ header {
   }
 }
 
+.cd-primary-nav{
+  background-color: $color-3;
+
+
+  & li a{
+   
+
+    &:link{
+      color: $color-1;
+    }
+
+    &:visited{
+      color: $color-5;
+    }
+
+    &:hover{
+      color: $color-6;
+      }
+
+      
+    &:active{
+      color: $color-9;
+    }
+
+  }
+}
+
+.cd-secondary-nav{
+
+  background-color: $color-6;
+
+  & li a{
+  
+
+    &:link{
+      color: $color-3;
+    }
+
+    &:visited{
+      color: $color-5;
+    }
+
+    &:hover{
+      color: $color-1;
+
+    }
+
+    &:active{
+      color: $color-9;
+    }
+
+  }
+}
+
+.cd-other{
+
+  background-color: $color-7;
+
+  & li a{
+
+    &:link{
+      color: $color-1;
+    }
+
+    &:visited{
+      color: $color-5;
+    }
+
+    &:hover{
+      color: $color-3;
+    }
+
+    &:active{
+      color: $color-9
+    }
+
+  }
+}
+
+.cd-button_link{
+  background-color: $color-8;
+
+  & li a{
+
+    &:link{
+      color: $color-1;
+      background-color: $color-3;
+    }
+
+    &:visited{
+      color: $color-2;
+      background-color: $color-6;
+    }
+
+    &:hover{
+      color: $color-3;
+      background-color: $color-1;
+    }
+
+    &:active{
+      color: $color-6;
+      background-color: $color-2;
+      outline: 1px solid $color-6;
+    }
+
+  }
+
+}
+  
+
+
 /* -------------------------------- 
 
 xPage title 
