--- a/src/scss/partials/_typography.scss
+++ b/src/scss/partials/_typography.scss
@@ -24,16 +24,20 @@ $secondary-font: 'Noto Sans', sans-serif;
 
 // color palette - these colors will be the color swatches of the Colors section
 
-$color-1: #5f8ee4; // Cornflower Blue - Action color
-$color-2: #19191a; // Dark Blue
-$color-3: #e4655f; // Red
-$color-4: #e6e6e6; // light grey
-$color-5: #ffffff; // white
+$color-1: #ffffff; // White
+$color-2: #3a5763; // Deep Space Sparkle
+$color-3: #264653; // Charcoal
+$color-4: #43aa8b; // Zomp
+$color-5: #90be6d; // Pistachio
+$color-6: #f9c74f; // Maize Crayola
+$color-7: #f8961e; // Yellow Orange Color Wheel
+$color-8: #f3722c; // Orange Red
+$color-9: #f94144; // Red Salsa
 
 // additional colors
 
 $success: #6fce72; // green
-$alert: $color-3; // red
+$alert: $color-9; // red
 
 
 
