--- a/src/scss/partials/_typography.scss
+++ b/src/scss/partials/_typography.scss
@@ -112,4 +112,12 @@ p {
     font-size: 1.6rem;
     line-height: 1.6;
   }
+
+  @include MQ(M) {
+    font-size: 4rem;
+  }
+
+  @include MQ(L){
+    font-size: 16px;
+  }
 }
