--- a/rostislav/style.css
+++ b/rostislav/style.css
@@ -1,15 +1,28 @@
-/* desktop layout */
-@media only screen and (min-width: 768px) {
-  html {
-    margin: 0;
-    padding: 0;
-  }
-
+/* set breakpoints */
+/* mobile layout */
+@media only screen and (max-width: 1024px) {
   /*----------- apply a natural box layout model to all elements --------------*/
   * {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
+  }
+
+  .summary {
+    background-color: #cccccc;
+  }
+
+  .page-wrapper {
+    display: grid;
+    grid-template-rows: auto auto auto auto auto auto auto auto auto auto auto;
+    grid-template-columns: auto;
+  }
+}
+/* desktop layout */
+@media only screen and (min-width: 1025px) {
+  html {
+    margin: 0;
+    padding: 0;
   }
 
   body {
@@ -61,9 +74,9 @@
   }
 
   .summary {
+    background-color: #cccccc;
     position: relative;
     margin-left: 10px;
-    background-color: #cccccc;
     grid-column: 1/4;
     grid-row: 2/3;
   }
