added partial layout scss file

--- a/rostislav/style.scss
+++ b/rostislav/style.scss
@@ -1,292 +1,1 @@
-/* set breakpoints */
-$breakpoint-small: 1024px;
-$breakpoint-large: 1025px;
-
-/* mobile layout */
-@media only screen and (max-width: $breakpoint-small) {
-	/*----------- apply a natural box layout model to all elements --------------*/
-    * { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
- 
-    .summary{
-        background-color: #cccccc;
-    }
-
-    .page-wrapper{ 
-        display: grid;
-        grid-template-rows: auto auto auto auto auto auto auto auto auto auto auto;
-        grid-template-columns: auto;
-    }
-    
-}
-
-/* desktop layout */
-@media only screen and (min-width: $breakpoint-large) {
-	html {
-		margin: 0;
-		padding: 0;
-	}
-	
-	body { 
-		margin: 0;
-		padding: 0;
-	}
-
-	ul {
-		list-style-type: none;
-		padding: 5px 20px 20px 20px;
-		margin: 0;
-	}
-	
-	.page-wrapper {
-		display: grid;
-		grid-template-columns: 20% 33% 15% 15% 17%;
-		grid-template-rows: 7% 22.4% 21.5% 16% 10.9% 16% 6.2% auto;
-	}
-	
-	.intro {
-		grid-column: 2/6;
-		grid-row: 1/4;
-	}
-	
-	.supporting {
-		grid-column: 1/5;
-		grid-row: 3/9;
-	}
-	
-	.sidebar {
-		grid-column: 1/2;
-		grid-row: 2/9;
-	}
-
-	.sidebar h3 {
-		padding: 20px 20px 0px 20px;
-	}
-	
-	.intro {
-		display: grid;
-		grid-template-columns: 39.4% 35% 25.6%;
-		grid-template-rows: 18.5% 36.4% 45.1%;
-		row-gap: 10px;
-	}
-	
-	.intro header {
-		grid-column: 1/4;
-		grid-row: 1/2;
-	} 
-	
-	.summary {	
-		background-color: #cccccc;
-		position: relative;
-		margin-left: 10px;	
-		grid-column: 1/4;
-		grid-row: 2/3;
-	}
-
-	.summary p {
-		margin: 0px 260px 0px 15px;
-		padding: 5px 15px 15px 0px;
-	}
-
-	.summary p:nth-child(1) {
-		position: absolute;
-		bottom: 50px;
-		left: 0;
-		border-bottom: 1px solid white;
-	}
-
-	.summary p:nth-child(2) {
-		position: absolute;
-        bottom: 0;
-        left: 0;
-	}
-	
-	.preamble {
-		margin: 2px 0px 0px 10px;
-		border: 1px solid black;
-		grid-column: 1/2;
-		grid-row: 3/4;
-	}
-
-	.preamble h3, .explanation h3, .participation h3, .benefits h3, .requirements h3 {
-		margin-bottom: 0;
-		padding: 0px 7px 0px 7px;
-	}
-
-	.preamble p:nth-child(2), .explanation p:nth-child(2), .participation p:nth-child(2), .benefits p:nth-child(2), .requirements p:nth-child(2) {
-		margin-top: 3px;
-	}
-
-	.preamble p, .explanation p, .participation p, .benefits p, .requirements p {
-        padding: 0px 7px 7px 7px;
-	}
-
-	.preamble p:last-child {
-		padding-bottom: 135px;
-	}
-
-	
-	.intro header {
-		position: relative;
-		display: grid;
-		grid-template-columns: 1fr;
-		grid-template-rows: 74% 26%;
-	}
-	
-	h1 {
-		margin-bottom: 2px;
-	    padding: 0px 117px 0px 117px;
-		grid-column: 1/2;
-		grid-row: 1/2;
-		position: absolute;
-        bottom: 0;
-        left: 0;
-	}
-	
-	h2 {
-		border-top: 1px solid black;
-		border-right: 1px solid black;
-		border-bottom: 1px solid black;
-		border-left: none;
-		margin: 0;
-		padding: 0px 117px 0px 117px;
-		grid-column: 1/2;
-		grid-row: 2/3;
-	}
-	
-	.supporting {
-		display: grid;
-		grid-template-columns: 24.1% 38% 18.9% 19%;
-		grid-template-rows: 30.5% 31% 21.7% 16.8%;
-	}
-	
-	.explanation {
-		margin: 1px 0px 10px 10px;
-		border: 1px solid black;
-		grid-column: 3/5;
-		grid-row: 1/2;
-	}
-	
-	.participation {
-		margin-right: 5px;
-		margin-left: 10px;
-		border: 1px solid black;
-		grid-column: 2/4;
-		grid-row: 2/3;
-	}
-	
-	.benefits {
-		margin-left: 5px;
-		border: 1px solid black;
-		grid-column: 4/5;
-		grid-row: 2/3;
-	}
-	
-	.requirements {
-		margin: 10px 0px 0px 10px;
-		border: 1px solid black;
-		grid-column: 2/5;
-		grid-row: 3/5;
-	}
-
-	.requirements p:last-child {
-        border-top: 1px solid black;
-		margin-top: 10px;
-	}
-	
-	footer {
-		border: 1px solid black;
-		grid-column: 1/2;
-		grid-row: 4/5;
-	}
-
-	footer {
-		text-align: center;
-		display: grid;
-		grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-		grid-template-rows: 1fr 1fr;
-		padding: 55px 25px 15px 25px;
-	}
-
-	footer a:nth-child(1) {
-		grid-column: 1/2;
-		grid-row: 1/2;
-	}
-
-	footer a:nth-child(2) {
-		grid-column: 3/4;
-		grid-row: 1/2;
-	}
-
-	footer a:nth-child(3) {
-		grid-column: 5/6;
-		grid-row: 1/2;
-	}
-
-	footer a:nth-child(4) {
-		grid-column: 2/3;
-		grid-row: 2/3;
-	}
-
-	footer a:nth-child(5) {
-		grid-column: 4/5;
-		grid-row: 2/3;
-	}
-	
-	.sidebar {
-		display: grid;
-		grid-template-columns: 1fr;
-		grid-template-rows: 1fr;
-	}
-	
-	.wrapper {
-		grid-column: 1/2;
-		grid-row: 1/2;
-	}
-
-	.wrapper {
-		display: grid;
-		grid-template-columns: 1fr;
-		grid-template-rows: 45.3% 15% 24.5% 15.2%;
-		row-gap: 10px;
-	}
-	
-	.design-selection {
-		border: 1px solid black;
-		grid-column: 1/2;
-		grid-row: 1/2;
-	}
-	
-	.design-archives {
-		border: 1px solid black;
-		grid-column: 1/2;
-		grid-row: 2/3;
-	}
-	
-	.zen-resources {
-		border: 1px solid black;
-		grid-column: 1/2;
-		grid-row: 3/4;
-	}
-	
-	.extra1, .extra2, .extra3, .extra4, .extra5, .extra6 {
-		display: none;
-	}
-
-	.page-wrapper::before {
-		content: '';
-		background-color: #cccccc;
-		display: grid;
-		grid-column: 5/6;
-		grid-row: 3/6;
-		margin: 1px 0px 10px 10px;
-	}
-	
-	.page-wrapper::after {
-		content: '';
-		background-color: #cccccc;
-		display: grid;
-		grid-column: 5/6;
-		grid-row: 6/9;
-		margin-left: 10px;
-	}
-}
+@import "layout";
