--- a/david/style.css
+++ b/david/style.css
@@ -1,194 +1,614 @@
-/* css Zen Garden default style v1.02 */
-/* css released under Creative Commons License - http://creativecommons.org/licenses/by-nc-sa/1.0/  */
-
-/* This file based on 'Tranquille' by Dave Shea */
-/* You may use this file as a foundation for any new work, but you may find it easier to start from scratch. */
-/* Not all elements are defined in this file, so you'll most likely want to refer to the xhtml as well. */
-
-/* Your images should be linked as if the CSS file sits in the same folder as the images. ie. no paths. */
-
-
-/* basic elements */
-html {
-	margin: 0;
-	padding: 0;
-	}
-body { 
-	font: 75% georgia, sans-serif;
-	line-height: 1.88889;
-	color: #555753; 
-	background: #fff url(http://csszengarden.com/001/blossoms.jpg) no-repeat bottom right; 
-	margin: 0; 
-	padding: 0;
-	}
-p { 
-	margin-top: 0; 
-	text-align: justify;
-	}
-h3 { 
-	font: italic normal 1.4em georgia, sans-serif;
-	letter-spacing: 1px; 
-	margin-bottom: 0; 
-	color: #7D775C;
-	}
-a:link { 
-	font-weight: bold; 
-	text-decoration: none; 
-	color: #B7A5DF;
-	}
-a:visited { 
-	font-weight: bold; 
-	text-decoration: none; 
-	color: #D4CDDC;
-	}
-a:hover, a:focus, a:active { 
-	text-decoration: underline; 
-	color: #9685BA;
-	}
-abbr {
-	border-bottom: none;
-	}
-
-
-/* specific divs */
-.page-wrapper { 
-	background: url(http://csszengarden.com/001/zen-bg.jpg) no-repeat top left; 
-	padding: 0 175px 0 110px;  
-	margin: 0; 
-	position: relative;
-	}
-
-.intro { 
-	min-width: 470px;
-	width: 100%;
-	}
-
-header h1 { 
-	background: transparent url(http://csszengarden.com/001/h1.gif) no-repeat top left;
-	margin-top: 10px;
-	display: block;
-	width: 219px;
-	height: 87px;
-	float: left;
-
-	text-indent: 100%;
-	white-space: nowrap;
-	overflow: hidden;
-	}
-header h2 { 
-	background: transparent url(http://csszengarden.com/001/h2.gif) no-repeat top left; 
-	margin-top: 58px; 
-	margin-bottom: 40px; 
-	width: 200px; 
-	height: 18px; 
-	float: right;
-
-	text-indent: 100%;
-	white-space: nowrap;
-	overflow: hidden;
-	}
-header {
-	padding-top: 20px;
-	height: 87px;
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap");
+h1 {
+  font-size: 100px;
+  text-transform: uppercase;
 }
 
-.summary {
-	clear: both; 
-	margin: 20px 20px 20px 10px; 
-	width: 160px; 
-	float: left;
-	}
-.summary p {
-	font: italic 1.1em/2.2 georgia; 
-	text-align: center;
-	}
+h2 {
+  font-size: 24px;
+}
 
-.preamble {
-	clear: right; 
-	padding: 0px 10px 0 10px;
-	}
-.supporting {	
-	padding-left: 10px; 
-	margin-bottom: 40px;
-	}
+aside.sidebar h3 {
+  font-size: 36px;
+}
 
-footer { 
-	text-align: center; 
-	}
-footer a:link, footer a:visited { 
-	margin-right: 20px; 
-	}
+div.preamble h3, div.main > div h3 {
+  font-size: 24px;
+}
 
-.sidebar {
-	margin-left: 600px; 
-	position: absolute; 
-	top: 0; 
-	right: 0;
-	}
-.sidebar .wrapper { 
-	font: 10px verdana, sans-serif; 
-	background: transparent url(http://csszengarden.com/001/paper-bg.jpg) top left repeat-y; 
-	padding: 10px; 
-	margin-top: 150px; 
-	width: 130px; 
-	}
-.sidebar h3.select { 
-	background: transparent url(http://csszengarden.com/001/h3.gif) no-repeat top left; 
-	margin: 10px 0 5px 0; 
-	width: 97px; 
-	height: 16px; 
+p {
+  font-size: 16px;
+}
 
-	text-indent: 100%;
-	white-space: nowrap;
-	overflow: hidden;
-	}
-.sidebar h3.archives { 
-	background: transparent url(http://csszengarden.com/001/h5.gif) no-repeat top left; 
-	margin: 25px 0 5px 0; 
-	width:57px; 
-	height: 14px; 
+div.summary p:nth-child(1) {
+  font-size: 170%;
+  letter-spacing: -0.5px;
+}
 
-	text-indent: 100%;
-	white-space: nowrap;
-	overflow: hidden;
-	}
-.sidebar h3.resources { 
-	background: transparent url(http://csszengarden.com/001/h6.gif) no-repeat top left; 
-	margin: 25px 0 5px 0; 
-	width:63px; 
-	height: 10px; 
+div.summary p:nth-child(2), div.summary p:nth-child(2) a {
+  font-size: 110%;
+}
 
-	text-indent: 100%;
-	white-space: nowrap;
-	overflow: hidden;
-	}
+a {
+  text-decoration: underline;
+}
 
+footer a {
+  font-size: 120%;
+  max-width: 51px;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  border: 1px solid black;
+  border-radius: 2px;
+  padding: 10px 1px 10px 1px;
+}
 
-.sidebar ul {
-	margin: 0;
-	padding: 0;
-	}
-.sidebar li {
-	line-height: 1.3em; 
-	background: transparent url(http://csszengarden.com/001/cr1.gif) no-repeat top center; 
-	display: block; 
-	padding-top: 5px; 
-	margin-bottom: 5px;
-	list-style-type: none;
-	}
-.sidebar li a:link {
-	color: #988F5E;
-	}
-.sidebar li a:visited {
-	color: #B3AE94;
-	}
+ul {
+  list-style-type: none;
+}
 
+aside.sidebar li {
+  font-size: 24px;
+  margin-top: 22px;
+}
 
-.extra1 {
-	background: transparent url(http://csszengarden.com/001/cr2.gif) top left no-repeat; 
-	position: absolute; 
-	top: 40px; 
-	right: 0; 
-	width: 148px; 
-	height: 110px;
-	}
+nav ul li:nth-child(1) {
+  margin-top: 12px;
+}
+
+h1, h2, h3, p, a {
+  font-style: normal;
+  font-weight: 400;
+}
+
+nav {
+  display: block;
+}
+
+/* set breakpoints */
+/* mobile layout */
+@media only screen and (max-width: 1024px) {
+  /*----------- apply a natural box layout model to all elements --------------*/
+  * {
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+  }
+  html {
+    margin: 0;
+    padding: 0;
+  }
+  body {
+    margin: 0;
+    padding: 0;
+  }
+  h1 {
+    font-size: 49px;
+    margin: 40px 0px 0px 0px;
+    padding: 0px 9px 0px 9px;
+  }
+  h2 {
+    margin: 0px 0px 20px 0px;
+    padding: 3px 9px 3px 9px;
+    border: 1px solid black;
+  }
+  h3 {
+    margin: 27px 0px 0px 0px;
+    padding: 0px 10px;
+  }
+  .summary {
+    background-color: #cccccc;
+  }
+  p {
+    margin: 0;
+    padding: 10px;
+  }
+  .summary p:nth-child(1) {
+    margin: 27px 0px 0px 0px;
+    padding-top: 60px;
+    padding-bottom: 15px;
+    border-bottom: 1px solid white;
+  }
+  .summary p:nth-child(2) {
+    margin: 0;
+    padding: 5px 10px 8px 10px;
+  }
+  div.design-selection nav ul li a:nth-child(1) {
+    text-transform: uppercase;
+  }
+  ul {
+    list-style-type: none;
+    padding: 5px 10px 20px 10px;
+    margin: 0;
+  }
+  .page-wrapper {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-rows: auto auto auto auto auto auto auto auto auto auto auto;
+        grid-template-rows: auto auto auto auto auto auto auto auto auto auto auto;
+    -ms-grid-columns: auto;
+        grid-template-columns: auto;
+  }
+  footer {
+    text-align: center;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    -ms-grid-rows: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+    padding: 45px 10px 15px 10px;
+  }
+  footer a {
+    margin: 20px auto;
+  }
+  footer a:nth-child(1) {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1/2;
+  }
+  footer a:nth-child(2) {
+    -ms-grid-column: 3;
+    -ms-grid-column-span: 1;
+    grid-column: 3/4;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1/2;
+  }
+  footer a:nth-child(3) {
+    -ms-grid-column: 5;
+    -ms-grid-column-span: 1;
+    grid-column: 5/6;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1/2;
+  }
+  footer a:nth-child(4) {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
+    grid-column: 2/3;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2/3;
+  }
+  footer a:nth-child(5) {
+    -ms-grid-column: 4;
+    -ms-grid-column-span: 1;
+    grid-column: 4/5;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2/3;
+  }
+}
+
+/* desktop layout */
+@media only screen and (min-width: 1025px) {
+  /*----------- apply a natural box layout model to all elements --------------*/
+  * {
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+  }
+  html {
+    margin: 0;
+    padding: 0;
+  }
+  body {
+    margin: 0;
+    padding: 0;
+  }
+  ul {
+    padding: 5px 20px 20px 20px;
+    margin: 0;
+  }
+  .page-wrapper {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 20% 33% 15% 15% 17%;
+        grid-template-columns: 20% 33% 15% 15% 17%;
+    -ms-grid-rows: 7% 22.4% 21.5% 16% 11.05% 16% 6.05% auto;
+        grid-template-rows: 7% 22.4% 21.5% 16% 11.05% 16% 6.05% auto;
+  }
+  .intro {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 4;
+    grid-column: 2/6;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 3;
+    grid-row: 1/4;
+  }
+  .supporting {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 4;
+    grid-column: 1/5;
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 6;
+    grid-row: 3/9;
+  }
+  .sidebar {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 7;
+    grid-row: 2/9;
+  }
+  .sidebar h3 {
+    padding: 5px 15px 0px 15px;
+    margin-bottom: 0px;
+  }
+  .intro {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 39.4% 35% 25.6%;
+        grid-template-columns: 39.4% 35% 25.6%;
+    -ms-grid-rows: 18.5% 36.8% 49.6%;
+        grid-template-rows: 18.5% 36.8% 49.6%;
+    row-gap: 10px;
+  }
+  .intro header {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 3;
+    grid-column: 1/4;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1/2;
+  }
+  .summary {
+    background-color: #cccccc;
+    position: relative;
+    margin-left: 10px;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 3;
+    grid-column: 1/4;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2/3;
+  }
+  .summary p {
+    margin: 0px 346px 0px 15px;
+    padding: 5px 20px 15px 0px;
+  }
+  .summary p:nth-child(1) {
+    position: absolute;
+    bottom: 50px;
+    left: 0;
+    border-bottom: 1px solid white;
+  }
+  .summary p:nth-child(2) {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+  }
+  .preamble {
+    margin: 2px 0px 0px 10px;
+    border: 1px solid black;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 1;
+    grid-row: 3/4;
+  }
+  .preamble h3, .explanation h3, .participation h3, .benefits h3, .requirements h3 {
+    margin-bottom: 0;
+    padding: 0px 7px 0px 7px;
+  }
+  .preamble p:nth-child(2), .explanation p:nth-child(2), .participation p:nth-child(2), .benefits p:nth-child(2), .requirements p:nth-child(2) {
+    margin-top: 3px;
+  }
+  .preamble p, .explanation p, .participation p, .benefits p, .requirements p {
+    padding: 0px 7px 0px 7px;
+  }
+  .preamble p:last-child {
+    padding-bottom: 135px;
+  }
+  .intro header {
+    position: relative;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    -ms-grid-rows: 74% 26%;
+        grid-template-rows: 74% 26%;
+  }
+  h1 {
+    margin-bottom: 2px;
+    padding: 0px 117px 0px 117px;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1/2;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+  }
+  h2 {
+    border-top: 1px solid black;
+    border-right: 1px solid black;
+    border-bottom: 1px solid black;
+    border-left: none;
+    margin: 0;
+    padding: 0px 117px 0px 117px;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2/3;
+  }
+  .supporting {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 24.1% 38% 18.9% 19%;
+        grid-template-columns: 24.1% 38% 18.9% 19%;
+    -ms-grid-rows: 33% 28.5% 23.9% 14.6%;
+        grid-template-rows: 33% 28.5% 23.9% 14.6%;
+  }
+  .explanation {
+    margin: 1px 0px 10px 10px;
+    border: 1px solid black;
+    -ms-grid-column: 3;
+    -ms-grid-column-span: 2;
+    grid-column: 3/5;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1/2;
+  }
+  .participation {
+    margin-right: 5px;
+    margin-left: 10px;
+    border: 1px solid black;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 2;
+    grid-column: 2/4;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2/3;
+  }
+  .benefits {
+    margin-left: 5px;
+    border: 1px solid black;
+    -ms-grid-column: 4;
+    -ms-grid-column-span: 1;
+    grid-column: 4/5;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2/3;
+  }
+  .requirements {
+    margin: 10px 0px 0px 10px;
+    border: 1px solid black;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 3;
+    grid-column: 2/5;
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 2;
+    grid-row: 3/5;
+  }
+  .requirements p:last-child {
+    border-top: 1px solid black;
+    margin-top: 10px;
+  }
+  footer {
+    border: 1px solid black;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+    -ms-grid-row: 4;
+    -ms-grid-row-span: 1;
+    grid-row: 4/5;
+  }
+  footer {
+    text-align: center;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    -ms-grid-rows: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+    padding: 45px 10px 15px 10px;
+  }
+  footer a:nth-child(1) {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1/2;
+  }
+  footer a:nth-child(2) {
+    -ms-grid-column: 3;
+    -ms-grid-column-span: 1;
+    grid-column: 3/4;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1/2;
+  }
+  footer a:nth-child(3) {
+    -ms-grid-column: 5;
+    -ms-grid-column-span: 1;
+    grid-column: 5/6;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1/2;
+  }
+  footer a:nth-child(4) {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
+    grid-column: 2/3;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2/3;
+  }
+  footer a:nth-child(5) {
+    -ms-grid-column: 4;
+    -ms-grid-column-span: 1;
+    grid-column: 4/5;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2/3;
+  }
+  .sidebar {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    -ms-grid-rows: 1fr;
+        grid-template-rows: 1fr;
+  }
+  .wrapper {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1/2;
+  }
+  .wrapper {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    -ms-grid-rows: 47.35% 15% 24.5% 13.05%;
+        grid-template-rows: 47.35% 15% 24.5% 13.05%;
+    row-gap: 10px;
+  }
+  .design-selection {
+    border: 1px solid black;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1/2;
+  }
+  .design-archives {
+    border: 1px solid black;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2/3;
+  }
+  .zen-resources {
+    border: 1px solid black;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 1;
+    grid-row: 3/4;
+  }
+  .extra1, .extra2, .extra3, .extra4, .extra5, .extra6 {
+    display: none;
+  }
+  .page-wrapper::before {
+    content: '';
+    background-color: #cccccc;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-column: 5;
+    -ms-grid-column-span: 1;
+    grid-column: 5/6;
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 3;
+    grid-row: 3/6;
+    margin: 1px 0px 10px 10px;
+  }
+  .page-wrapper::after {
+    content: '';
+    background-color: #cccccc;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-column: 5;
+    -ms-grid-column-span: 1;
+    grid-column: 5/6;
+    -ms-grid-row: 6;
+    -ms-grid-row-span: 3;
+    grid-row: 6/9;
+    margin-left: 10px;
+  }
+  div.design-selection nav ul li a:nth-child(1) {
+    text-transform: uppercase;
+  }
+  div.design-selection nav ul li:nth-child(2) a:nth-child(1) {
+    padding-right: 97px;
+  }
+  div.design-selection nav ul li:nth-child(3) a:nth-child(1) {
+    padding-right: 146px;
+  }
+  div.design-selection nav ul li:nth-child(4) a:nth-child(1) {
+    padding-right: 73px;
+  }
+  div.design-selection nav ul li:nth-child(5) a:nth-child(1) {
+    padding-right: 55px;
+  }
+  div.design-selection nav ul li:nth-child(6) a:nth-child(1) {
+    padding-right: 53px;
+  }
+  div.design-selection nav ul li:nth-child(8) a:nth-child(1) {
+    padding-right: 34px;
+  }
+}
+
+h1, h2, h3, a {
+  font-family: "Source Sans Pro", sans-serif;
+}
+
+p {
+  font-family: "Noto Sans", sans-serif;
+}
+
+@-webkit-keyframes introductory {
+  from {
+    margin-left: 30%;
+  }
+  to {
+    margin-left: 1%;
+  }
+}
+
+@keyframes introductory {
+  from {
+    margin-left: 30%;
+  }
+  to {
+    margin-left: 1%;
+  }
+}
+
+@-webkit-keyframes animationmenu {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes animationmenu {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+#zen-summary {
+  -webkit-animation: introductory 3s linear 1 forwards;
+          animation: introductory 3s linear 1 forwards;
+}
+
+#design-selection {
+  -webkit-animation: animationmenu 4s linear 1 forwards;
+          animation: animationmenu 4s linear 1 forwards;
+}
+/*# sourceMappingURL=style.css.map */
