--- a/rostislav/style.css
+++ b/rostislav/style.css
@@ -38,7 +38,6 @@ footer a {
   font-size: 120%;
   max-width: 51px;
   height: fit-content;
-  border: 1px solid black;
   border-radius: 2px;
   padding: 10px 1px 10px 1px;
 }
@@ -63,6 +62,122 @@ h1, h2, h3, p, a {
 
 nav {
   display: block;
+}
+
+body {
+  background-color: #3a5763;
+}
+
+h1 {
+  background-color: #ffffff;
+  color: #90be6d;
+}
+
+h2 {
+  background-color: #ffffff;
+  color: #43aa8b;
+  border-top: 1px solid #43aa8b;
+  border-right: 1px solid #43aa8b;
+  border-bottom: 1px solid #43aa8b;
+  border-left: none;
+}
+
+.preamble h3 {
+  color: #43aa8b;
+}
+
+.explanation h3 {
+  color: #ffffff;
+}
+
+.participation h3 {
+  color: #264653;
+}
+
+.benefits h3 {
+  color: #f3722c;
+}
+
+.requirements h3 {
+  color: #f94144;
+}
+
+h3.select {
+  color: #f9c74f;
+}
+
+h3.archives {
+  color: #ffffff;
+}
+
+h3.resources {
+  color: #264653;
+}
+
+.summary p, .explanation p, .participation p, .requirements p:last-child {
+  color: #ffffff;
+}
+
+.preamble p, .requirements p {
+  color: #3a5763;
+}
+
+.benefits p {
+  color: #90be6d;
+}
+
+.preamble, .benefits, .requirements {
+  background-color: #ffffff;
+}
+
+.explanation {
+  background-color: #43aa8b;
+}
+
+.participation {
+  background-color: #90be6d;
+}
+
+.requirements p:last-child {
+  background-color: #f94144;
+}
+
+.preamble {
+  border: 1px solid #f8961e;
+}
+
+.explanation {
+  border: 1px solid #43aa8b;
+}
+
+.participation {
+  border: 1px solid #90be6d;
+}
+
+.benefits {
+  border: 1px solid #f94144;
+}
+
+.requirements {
+  border-top: 1px solid #f8961e;
+  border-right: 1px solid #f8961e;
+  border-bottom: 1px solid #f94144;
+  border-left: 1px solid #f8961e;
+}
+
+.requirements p:last-child {
+  border: 1px solid #f94144;
+}
+
+/*.summary p:last-child a, .explanation a, .participation a, .requirements p:last-child a*/
+footer {
+  background-color: #f3722c;
+  border: 1px solid #f3722c;
+}
+
+footer a {
+  background-color: #264653;
+  border: 1px solid #ffffff;
 }
 
 /* set breakpoints */
@@ -196,7 +311,7 @@ nav {
   }
 
   ul {
-    padding: 5px 20px 20px 20px;
+    padding: 5px 15px 20px 15px;
     margin: 0;
   }
 
@@ -266,7 +381,6 @@ nav {
 
   .preamble {
     margin: 2px 0px 0px 10px;
-    border: 1px solid black;
     grid-column: 1/2;
     grid-row: 3/4;
   }
@@ -306,10 +420,6 @@ nav {
   }
 
   h2 {
-    border-top: 1px solid black;
-    border-right: 1px solid black;
-    border-bottom: 1px solid black;
-    border-left: none;
     margin: 0;
     padding: 0px 117px 0px 117px;
     grid-column: 1/2;
@@ -324,7 +434,6 @@ nav {
 
   .explanation {
     margin: 1px 0px 10px 10px;
-    border: 1px solid black;
     grid-column: 3/5;
     grid-row: 1/2;
   }
@@ -332,32 +441,27 @@ nav {
   .participation {
     margin-right: 5px;
     margin-left: 10px;
-    border: 1px solid black;
     grid-column: 2/4;
     grid-row: 2/3;
   }
 
   .benefits {
     margin-left: 5px;
-    border: 1px solid black;
     grid-column: 4/5;
     grid-row: 2/3;
   }
 
   .requirements {
     margin: 10px 0px 0px 10px;
-    border: 1px solid black;
     grid-column: 2/5;
     grid-row: 3/5;
   }
 
   .requirements p:last-child {
-    border-top: 1px solid black;
     margin-top: 10px;
   }
 
   footer {
-    border: 1px solid black;
     grid-column: 1/2;
     grid-row: 4/5;
   }
@@ -414,19 +518,16 @@ nav {
   }
 
   .design-selection {
-    border: 1px solid black;
     grid-column: 1/2;
     grid-row: 1/2;
   }
 
   .design-archives {
-    border: 1px solid black;
     grid-column: 1/2;
     grid-row: 2/3;
   }
 
   .zen-resources {
-    border: 1px solid black;
     grid-column: 1/2;
     grid-row: 3/4;
   }
@@ -458,27 +559,27 @@ nav {
   }
 
   div.design-selection nav ul li:nth-child(2) a:nth-child(1) {
-    padding-right: 97px;
+    margin-right: 97px;
   }
 
   div.design-selection nav ul li:nth-child(3) a:nth-child(1) {
-    padding-right: 146px;
+    margin-right: 146px;
   }
 
   div.design-selection nav ul li:nth-child(4) a:nth-child(1) {
-    padding-right: 73px;
+    margin-right: 73px;
   }
 
   div.design-selection nav ul li:nth-child(5) a:nth-child(1) {
-    padding-right: 55px;
+    margin-right: 55px;
   }
 
   div.design-selection nav ul li:nth-child(6) a:nth-child(1) {
-    padding-right: 53px;
+    margin-right: 53px;
   }
 
   div.design-selection nav ul li:nth-child(8) a:nth-child(1) {
-    padding-right: 34px;
+    margin-right: 34px;
   }
 }
 h1, h2, h3, a {
@@ -487,6 +588,75 @@ h1, h2, h3, a {
 
 p {
   font-family: "Noto Sans", sans-serif;
+}
+
+.design-selection {
+  background-color: #264653;
+  border: 1px solid #ffffff;
+}
+.design-selection li a {
+  /* unvisited link */
+  /* visited link */
+  /* mouse over link */
+  /* selected link */
+}
+.design-selection li a:link {
+  color: #ffffff;
+}
+.design-selection li a:visited {
+  color: #90be6d;
+}
+.design-selection li a:hover {
+  color: #f9c74f;
+}
+.design-selection li a:active {
+  color: #f94144;
+}
+
+.design-archives {
+  background-color: #f9c74f;
+  border: 1px solid #f9c74f;
+}
+.design-archives li a {
+  /* unvisited link */
+  /* visited link */
+  /* mouse over link */
+  /* selected link */
+}
+.design-archives li a:link {
+  color: #264653;
+}
+.design-archives li a:visited {
+  color: #90be6d;
+}
+.design-archives li a:hover {
+  color: #ffffff;
+}
+.design-archives li a:active {
+  color: #f94144;
+}
+
+.zen-resources {
+  background-color: #f8961e;
+  border: 1px solid #f8961e;
+}
+.zen-resources li a {
+  /* unvisited link */
+  /* visited link */
+  /* mouse over link */
+  /* selected link */
+}
+.zen-resources li a:link {
+  color: #ffffff;
+}
+.zen-resources li a:visited {
+  color: #90be6d;
+}
+.zen-resources li a:hover {
+  color: #264653;
+}
+.zen-resources li a:active {
+  color: #f94144;
 }
 
 /*# sourceMappingURL=style.css.map */
