--- a/david/_animations.scss
+++ b/david/_animations.scss
@@ -15,11 +15,26 @@
     opacity: 1;
   }
 }
+@keyframes appearingtext {
+  from {
+    opacity: 0;
+  }
+  90% {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 
 #zen-summary {
-  animation: introductory 3s linear 1 forwards;
+  animation: introductory 1.5s linear 1 forwards;
+}
+
+#zen-summary p {
+  animation: appearingtext 3s linear 1 forwards;
 }
 
 #design-selection {
-  animation: animationmenu 4s linear 1 forwards;
+  animation: animationmenu 1.5s linear 1 forwards;
 }
