--- a/david/style.css
+++ b/david/style.css
@@ -602,13 +602,42 @@ p {
   }
 }
 
+@-webkit-keyframes appearingtext {
+  from {
+    opacity: 0;
+  }
+  90% {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes appearingtext {
+  from {
+    opacity: 0;
+  }
+  90% {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 #zen-summary {
-  -webkit-animation: introductory 3s linear 1 forwards;
-          animation: introductory 3s linear 1 forwards;
+  -webkit-animation: introductory 1.5s linear 1 forwards;
+          animation: introductory 1.5s linear 1 forwards;
+}
+
+#zen-summary p {
+  -webkit-animation: appearingtext 3s linear 1 forwards;
+          animation: appearingtext 3s linear 1 forwards;
 }
 
 #design-selection {
-  -webkit-animation: animationmenu 4s linear 1 forwards;
-          animation: animationmenu 4s linear 1 forwards;
+  -webkit-animation: animationmenu 1.5s linear 1 forwards;
+          animation: animationmenu 1.5s linear 1 forwards;
 }
 /*# sourceMappingURL=style.css.map */
