--- a/patrick/smallscreen.css
+++ b/patrick/smallscreen.css
@@ -499,10 +499,11 @@ p {
 }
 
 h1{
-  height: fit-content;
-  background: red;
-  border-radius: 300px / 100px;
-  
+  border-bottom: 100px solid red;
+  border-left: 25px solid transparent;
+  border-right: 25px solid transparent;
+  height: 0;
+  width: 100%;
 }
 
 /*# sourceMappingURL=style.css.map */
