--- a/rostislav/style.css
+++ b/rostislav/style.css
@@ -1,5 +1,44 @@
 @import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap");
+@keyframes introductory {
+  from {
+    margin-left: 30%;
+  }
+  to {
+    margin-left: 1%;
+  }
+}
+@keyframes animationmenu {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes appearingtext {
+  from {
+    opacity: 0;
+  }
+  90% {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+#zen-summary {
+  animation: introductory 1.5s linear 1 forwards;
+}
+
+#zen-summary p {
+  animation: appearingtext 3s linear 1 forwards;
+}
+
+#design-selection {
+  animation: animationmenu 1.5s linear 1 forwards;
+}
+
 h1 {
   font-size: 100px;
   text-transform: uppercase;
@@ -24,13 +63,16 @@ p {
 div.summary p:nth-child(1) {
   font-size: 170%;
   letter-spacing: -0.5px;
+  text-shadow: 2px 2px 4px #000000;
 }
 
 div.summary p:nth-child(2), div.summary p:nth-child(2) a {
   font-size: 110%;
+  text-shadow: 2px 2px 4px #000000;
 }
 
 a {
+  cursor: pointer;
   text-decoration: underline;
 }
 
@@ -40,10 +82,6 @@ footer a {
   height: fit-content;
   border-radius: 2px;
   padding: 10px 1px 10px 1px;
-}
-
-ul {
-  list-style-type: none;
 }
 
 aside.sidebar li {
@@ -64,12 +102,20 @@ nav {
   display: block;
 }
 
+ul {
+  list-style-type: none;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 body {
   background-color: #3a5763;
 }
 
 h1 {
-  background-color: #ffffff;
   color: #90be6d;
 }
 
@@ -169,15 +215,63 @@ h3.resources {
   border: 1px solid #f94144;
 }
 
-/*.summary p:last-child a, .explanation a, .participation a, .requirements p:last-child a*/
+.summary p:last-child a:link, .participation a:link, .requirements p:last-child a:link {
+  color: #ffffff;
+}
+.summary p:last-child a:visited, .participation a:visited, .requirements p:last-child a:visited {
+  color: #264653;
+}
+.summary p:last-child a:hover, .participation a:hover, .requirements p:last-child a:hover {
+  color: #f9c74f;
+}
+.summary p:last-child a:active, .participation a:active, .requirements p:last-child a:active {
+  color: #f94144;
+}
+
+.requirements p:nth-child(5) a:link {
+  color: #3a5763;
+}
+.requirements p:nth-child(5) a:visited {
+  color: #264653;
+}
+.requirements p:nth-child(5) a:hover {
+  color: #f9c74f;
+}
+.requirements p:nth-child(5) a:active {
+  color: #f94144;
+}
+
+nav ul li {
+  color: #ffffff;
+}
+
 footer {
   background-color: #f3722c;
   border: 1px solid #f3722c;
 }
-
 footer a {
+  position: relative;
+  z-index: 2;
+}
+footer a:link {
+  color: #ffffff;
   background-color: #264653;
   border: 1px solid #ffffff;
+}
+footer a:visited {
+  color: #90be6d;
+  background-color: #3a5763;
+  border: 1px solid #90be6d;
+}
+footer a:hover {
+  color: #264653;
+  background-color: #ffffff;
+  border: 1px solid #ffffff;
+}
+footer a:active {
+  color: #f94144;
+  background-color: #ffffff;
+  border: 1px solid #f94144;
 }
 
 /* set breakpoints */
@@ -202,14 +296,14 @@ footer a {
 
   h1 {
     font-size: 49px;
-    margin: 40px 0px 0px 0px;
-    padding: 0px 9px 0px 9px;
+    margin: 0;
+    padding: 40px 9px 0px 9px;
+    background-color: #ffffff;
   }
 
   h2 {
     margin: 0px 0px 20px 0px;
     padding: 3px 9px 3px 9px;
-    border: 1px solid black;
   }
 
   h3 {
@@ -218,7 +312,7 @@ footer a {
   }
 
   .summary {
-    background-color: #cccccc;
+    background: url("images/banner1-sm.jpg"), #ffffff;
   }
 
   p {
@@ -230,7 +324,7 @@ footer a {
     margin: 27px 0px 0px 0px;
     padding-top: 60px;
     padding-bottom: 15px;
-    border-bottom: 1px solid white;
+    border-bottom: 1px solid #ffffff;
   }
 
   .summary p:nth-child(2) {
@@ -254,16 +348,27 @@ footer a {
     grid-template-columns: auto;
   }
 
+  .preamble, .supporting div, .wrapper div {
+    margin: 27px 0px 0px 0px;
+    padding: 0px 0px 50px 0px;
+  }
+
+  .supporting div.requirements {
+    padding: 0;
+    margin: 27px 0px 27px 0px;
+  }
+
+  .requirements p:last-child {
+    margin: 27px 0px 0px 0px;
+    padding: 20px 10px 27px 10px;
+  }
+
   footer {
     text-align: center;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: auto auto auto auto auto;
     grid-template-rows: 1fr 1fr;
-    padding: 45px 10px 15px 10px;
-  }
-
-  footer a {
-    margin: 20px auto;
+    padding: 45px 5px 45px 5px;
   }
 
   footer a:nth-child(1) {
@@ -289,6 +394,11 @@ footer a {
   footer a:nth-child(5) {
     grid-column: 4/5;
     grid-row: 2/3;
+  }
+
+  footer a {
+    margin: 0 auto;
+    min-width: 50.2px;
   }
 }
 /* desktop layout */
@@ -322,7 +432,7 @@ footer a {
   }
 
   .intro {
-    grid-column: 2/6;
+    grid-column: 1/6;
     grid-row: 1/4;
   }
 
@@ -343,7 +453,7 @@ footer a {
 
   .intro {
     display: grid;
-    grid-template-columns: 39.4% 35% 25.6%;
+    grid-template-columns: 20% 31.5% auto;
     grid-template-rows: 18.5% 36.8% 49.6%;
     row-gap: 10px;
   }
@@ -354,10 +464,10 @@ footer a {
   }
 
   .summary {
-    background-color: #cccccc;
+    background: url("images/banner1-lg.jpg"), #ffffff;
     position: relative;
     margin-left: 10px;
-    grid-column: 1/4;
+    grid-column: 2/4;
     grid-row: 2/3;
   }
 
@@ -381,7 +491,7 @@ footer a {
 
   .preamble {
     margin: 2px 0px 0px 10px;
-    grid-column: 1/2;
+    grid-column: 2/3;
     grid-row: 3/4;
   }
 
@@ -410,20 +520,26 @@ footer a {
   }
 
   h1 {
-    margin-bottom: 2px;
-    padding: 0px 117px 0px 117px;
     grid-column: 1/2;
     grid-row: 1/2;
     position: absolute;
     bottom: 0;
     left: 0;
+    border-bottom: 100px solid #ffffff;
+    border-left: 25px solid transparent;
+    border-right: 25px solid transparent;
+    height: 0;
+    width: 100%;
+    margin-bottom: 1px;
+    padding: 0px 10px 5px 287px;
+    background-color: transparent;
   }
 
   h2 {
     margin: 0;
-    padding: 0px 117px 0px 117px;
     grid-column: 1/2;
     grid-row: 2/3;
+    padding: 0px 309px 0px 317px;
   }
 
   .supporting {
@@ -538,7 +654,8 @@ footer a {
 
   .page-wrapper::before {
     content: "";
-    background-color: #cccccc;
+    background-color: #ffffff;
+    background-image: url("images/banner2.jpg");
     display: grid;
     grid-column: 5/6;
     grid-row: 3/6;
@@ -547,7 +664,8 @@ footer a {
 
   .page-wrapper::after {
     content: "";
-    background-color: #cccccc;
+    background-color: #ffffff;
+    background-image: url("images/banner3.jpg");
     display: grid;
     grid-column: 5/6;
     grid-row: 6/9;
@@ -563,15 +681,15 @@ footer a {
   }
 
   div.design-selection nav ul li:nth-child(3) a:nth-child(1) {
-    margin-right: 146px;
+    margin-right: 147px;
   }
 
   div.design-selection nav ul li:nth-child(4) a:nth-child(1) {
-    margin-right: 73px;
+    margin-right: 74px;
   }
 
   div.design-selection nav ul li:nth-child(5) a:nth-child(1) {
-    margin-right: 55px;
+    margin-right: 56px;
   }
 
   div.design-selection nav ul li:nth-child(6) a:nth-child(1) {
@@ -579,26 +697,12 @@ footer a {
   }
 
   div.design-selection nav ul li:nth-child(8) a:nth-child(1) {
-    margin-right: 34px;
+    margin-right: 35px;
   }
 }
-h1, h2, h3, a {
-  font-family: "Source Sans Pro", sans-serif;
-}
-
-p {
-  font-family: "Noto Sans", sans-serif;
-}
-
 .design-selection {
   background-color: #264653;
   border: 1px solid #ffffff;
-}
-.design-selection li a {
-  /* unvisited link */
-  /* visited link */
-  /* mouse over link */
-  /* selected link */
 }
 .design-selection li a:link {
   color: #ffffff;
@@ -617,12 +721,6 @@ p {
   background-color: #f9c74f;
   border: 1px solid #f9c74f;
 }
-.design-archives li a {
-  /* unvisited link */
-  /* visited link */
-  /* mouse over link */
-  /* selected link */
-}
 .design-archives li a:link {
   color: #264653;
 }
@@ -640,12 +738,6 @@ p {
   background-color: #f8961e;
   border: 1px solid #f8961e;
 }
-.zen-resources li a {
-  /* unvisited link */
-  /* visited link */
-  /* mouse over link */
-  /* selected link */
-}
 .zen-resources li a:link {
   color: #ffffff;
 }
@@ -657,6 +749,14 @@ p {
 }
 .zen-resources li a:active {
   color: #f94144;
+}
+
+h1, h2, h3, a {
+  font-family: "Source Sans Pro", sans-serif;
+}
+
+p {
+  font-family: "Noto Sans", sans-serif;
 }
 
 /*# sourceMappingURL=style.css.map */
