--- a/rostislav/_layout.scss
+++ b/rostislav/_layout.scss
@@ -19,14 +19,14 @@ $breakpoint-large: 1025px;
     
     h1 {
 		font-size: 49px;
-		margin: 40px 0px 0px 0px;
-		padding: 0px 9px 0px 9px;
+		margin: 0;
+		padding: 40px 9px 0px 9px;
+		background-color: $body-bg-color2;
 	}
 
 	h2 {
 		margin: 0px 0px 20px 0px;
 		padding: 3px 9px 3px 9px;
-		border: 1px solid black;
 	}
 
 	h3 {
@@ -35,7 +35,7 @@ $breakpoint-large: 1025px;
 	}
 
     .summary{
-        background-color: #cccccc;
+        background: url('images/banner1-sm.jpg'), $body-bg-color2;
     }
 
 	p {
@@ -47,7 +47,7 @@ $breakpoint-large: 1025px;
 		margin: 27px 0px 0px 0px;
 		padding-top: 60px;
 		padding-bottom: 15px;
-		border-bottom: 1px solid white;
+		border-bottom: 1px solid $border-color5;
 	}
 
 	.summary p:nth-child(2) {
@@ -72,16 +72,27 @@ $breakpoint-large: 1025px;
         grid-template-columns: auto;
     }
 
+	.preamble, .supporting div, .wrapper div {
+		margin: 27px 0px 0px 0px;
+		padding: 0px 0px 50px 0px;
+	}
+
+	.supporting div.requirements {
+		padding: 0;
+		margin: 27px 0px 27px 0px;
+	}
+
+	.requirements p:last-child {
+		margin: 27px 0px 0px 0px;
+		padding: 20px 10px 27px 10px;
+	}
+
 	footer {
 		text-align: center;
 		display: grid;
-		grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+		grid-template-columns: auto auto auto auto auto;
 		grid-template-rows: 1fr 1fr;
-		padding: 45px 10px 15px 10px;
-	}
-
-	footer a {
-		margin: 20px auto;
+		padding: 45px 5px 45px 5px;
 	}
 
 	footer a:nth-child(1) {
@@ -107,6 +118,11 @@ $breakpoint-large: 1025px;
 	footer a:nth-child(5) {
 		grid-column: 4/5;
 		grid-row: 2/3;
+	}
+
+	footer a {
+		margin: 0 auto;
+		min-width: 50.2px;
 	}
     
 }
@@ -138,7 +154,7 @@ $breakpoint-large: 1025px;
 	}
 	
 	.intro {
-		grid-column: 2/6;
+		grid-column: 1/6;
 		grid-row: 1/4;
 	}
 	
@@ -159,7 +175,7 @@ $breakpoint-large: 1025px;
 	
 	.intro {
 		display: grid;
-		grid-template-columns: 39.4% 35% 25.6%;
+		grid-template-columns: 20% 31.5% auto;
 		grid-template-rows: 18.5% 36.8% 49.6%;
 		row-gap: 10px;
 	}
@@ -170,10 +186,10 @@ $breakpoint-large: 1025px;
 	} 
 	
 	.summary {	
-		background-color: #cccccc;
+		background: url('images/banner1-lg.jpg'), $body-bg-color2;
 		position: relative;
 		margin-left: 10px;	
-		grid-column: 1/4;
+		grid-column: 2/4;
 		grid-row: 2/3;
 	}
 
@@ -197,7 +213,7 @@ $breakpoint-large: 1025px;
 	
 	.preamble {
 		margin: 2px 0px 0px 10px;
-		grid-column: 1/2;
+		grid-column: 2/3;
 		grid-row: 3/4;
 	}
 
@@ -227,20 +243,26 @@ $breakpoint-large: 1025px;
 	}
 	
 	h1 {
-		margin-bottom: 2px;
-	    padding: 0px 117px 0px 117px;
 		grid-column: 1/2;
 		grid-row: 1/2;
 		position: absolute;
         bottom: 0;
         left: 0;
+		border-bottom: 100px solid $body-bg-color2;
+        border-left: 25px solid transparent;
+        border-right: 25px solid transparent;
+        height: 0;
+        width: 100%;
+		margin-bottom: 1px;
+		padding: 0px 10px 5px 287px;
+		background-color: transparent;
 	}
 	
 	h2 {
 		margin: 0;
-		padding: 0px 117px 0px 117px;
 		grid-column: 1/2;
 		grid-row: 2/3;
+		padding: 0px 309px 0px 317px;
 	}
 	
 	.supporting {
@@ -355,7 +377,8 @@ $breakpoint-large: 1025px;
 
 	.page-wrapper::before {
 		content: '';
-		background-color: #cccccc;
+		background-color: $body-bg-color2;
+		background-image: url('images/banner2.jpg');
 		display: grid;
 		grid-column: 5/6;
 		grid-row: 3/6;
@@ -364,7 +387,8 @@ $breakpoint-large: 1025px;
 	
 	.page-wrapper::after {
 		content: '';
-		background-color: #cccccc;
+		background-color: $body-bg-color2;
+		background-image: url('images/banner3.jpg');
 		display: grid;
 		grid-column: 5/6;
 		grid-row: 6/9;
@@ -380,15 +404,15 @@ $breakpoint-large: 1025px;
 	}
 	
 	div.design-selection nav ul li:nth-child(3) a:nth-child(1) {
-		margin-right: 146px;
+		margin-right: 147px;
 	}
 	
 	div.design-selection nav ul li:nth-child(4) a:nth-child(1) {
-		margin-right: 73px;
+		margin-right: 74px;
 	}
 	
 	div.design-selection nav ul li:nth-child(5) a:nth-child(1) {
-		margin-right: 55px;
+		margin-right: 56px;
 	}
 	
 	div.design-selection nav ul li:nth-child(6) a:nth-child(1) {
@@ -396,6 +420,6 @@ $breakpoint-large: 1025px;
 	}
 	
 	div.design-selection nav ul li:nth-child(8) a:nth-child(1) {
-		margin-right: 34px;
+		margin-right: 35px;
 	}
 }
