--- a/rostislav/style.scss
+++ b/rostislav/style.scss
@@ -1,5 +1,6 @@
+@import 'animations';
 @import 'basic-style';
 @import 'colors';
 @import 'layout';
-@import 'typography';
 @import 'navigation';
+@import 'typography';
